Fix .toList maintainability issue